Added NRLMSISE00 input file docs

--- a/docstrings/numerical_simulation/environment_setup/atmosphere.yaml
+++ b/docstrings/numerical_simulation/environment_setup/atmosphere.yaml
@@ -358,6 +358,14 @@ functions:
     notes: | # [cpp] ( %! assuming it only affects cpp)
       To use this model, the ``USE_NRLMSISE`` flag in your top-level CMakeLists must be set to true. # [cpp]
 
+    parameters:
+
+      - name: space_weather_file # [py]
+        type: str, default = :func:`~tudatpy.io.get_space_weather_path` + 'sw19571001.txt' # [py]
+        description: File to be used for space weather characteristics as a function of time (e.g. F10.7, Kp, etc.). The file is typically
+          taken from here `https://celestrak.org/SpaceData/sw19571001.txt`_ (note that the file in your resources path will not be the latest version
+          of this file; download and replace your existing file if required). Documentation on the file is given `here <https://celestrak.org/SpaceData/SpaceWx-format.php>`_
+
     examples: |
       In this example, we create :class:`~tudatpy.numerical_simulation.environment_setup.atmosphere.AtmosphereSettings` for Earth,
       using the NRLMSISE-00 global reference model:
